# morse-alphabet

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docs/: finite-state-machine-design.md  high-level-design.md
lib/systemc/macos/arm/: libsystemc.3.0.0.dylib
src/cmd/: main.cpp
src/internal/core/converter/: converter.cpp  converter.hpp
src/internal/core/executor/: executor.cpp  executor.hpp
src/internal/core/pipeline/: pipeline.cpp  pipeline.hpp
src/internal/core/scheduler/: scheduler.cpp  scheduler.hpp
src/internal/core/state/: state.cpp  state.hpp
src/internal/core/store/: store.hpp
src/internal/core/watcher/: watcher.cpp  watcher.hpp
src/internal/entity/: entity.hpp
src/internal/logger/: logger.cpp  logger.hpp
src/internal/tools/morse/: morse.cpp  morse.hpp
tests/: CMakeLists.txt
tests/complete/: CMakeLists.txt  complete_tb.cpp
tests/complete/helper/: helper.cpp  helper.hpp
tests/execution/: CMakeLists.txt  execution_tb.cpp
tests/execution/helper/: helper.cpp  helper.hpp
tests/executor/: CMakeLists.txt  executor_tb.cpp
tests/scheduler/: CMakeLists.txt  scheduler_tb.cpp
